[fix/admin-perm-articles] Added admin perms to article filtering add Theme name to all article + implementation
