# shared/generated/openapi-v1.json
@@ -2950,6 +2950,20 @@
               }
             }
           },
+          "Theme": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string"
+              },
+              "name": {
+                "type": "string"
+              },
+              "iconUrl": {
+                "type": "string"
+              }
+            }
+          },
           "banner": {
             "type": "string",
             "format": "binary"
